<resources>
    <string name="app_name">Maaco Training App</string>
    <string name="edit_message">Search</string>
    <string name="button_search">Search</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="painting1">As with the primer, mix the paint with thinners using the recommended ratios on the paint can instructions.</string>
    <string name="painting2">Apply the topcoat paint.Each coat will take about 10 minutes to apply per panel and between 20 minutes to an hour between recoating for the paint to cure.</string>
    <string name="painting3">Apply three to four coats using the recommended drying time specified on the paint can instructions between coats.</string>
    <string name="preperation">Preperation</string>
    <string name="painting">Painting</string>
    <string name="masking">Masking</string>

    <string name="sanding">Sanding</string>
    <string name="sanding1">Select 1200- and 2000-grit wet-and-dry sandpaper \nand an electric or air-powered sander.</string>
    <string name="sanding2">Use a circular motion to sand off the paint down to\nthe bare metal.</string>
    <string name="sanding3">Sand the corners and crevices by hand using the \nsame circular motion.</string>
    <string name="sanding4">Wipe down all surfaces with a clean rag and thinner \nto remove dust.</string>
    <string name="sanding5">Wait until the residue from the thinner evaporates completely before continuing.</string>

    <string name="detailing">Detailing</string>
    <string name="detailing1">Remove and wash mats.</string>
    <string name="detailing2">Vacuum all surfaces, including dashboard, back shelf, and under seats.</string>
    <string name="detailing3">Spot clean stains with foaming cleaner. Let cleaner sit and blot dry.</string>
    <string name="detailing4">Patch up burn areas and holes.</string>
    <string name="detailing5">Clean and dust interior surfaces with all purpose cleaner and compressed air.</string>
    <string name="detailing6">Clean the glass, including windshield, with glass cleaner.</string>
    <string name="detailing7">Clean exterior of the car.</string>
    <string name="detailing8">Clean wheel wells.</string>
    <string name="detailing9">Inspect paint.</string>
    <string name="detailing10">Under the hood, clean around electronic components by wrapping in plastic.</string>
    <string name="detailing11">Make sure tires are dry before moving vehicle.</string>

    <string name="remove_the_masking_while_the_clear_coat_is_still_wet_being_careful_not_to_get_any_tape_or_paper_stuck_on_the_wet_paint">Remove the masking while the clear coat is still wet, being careful not to get any tape or paper stuck on the wet paint.</string>
    <string name="let_the_clear_coat_cure_for_the_recommended_time_inspect_the_finished_job_for_runs_or_imperfections_if_you_find_any_sand_back_affected_area_with_2000_grit_wet_and_dry_sandpaper_and_respray">Let the clear coat cure for the recommended time. Inspect the finished job for runs or imperfections.If you find any, sand back affected area with 2000-grit wet-and-dry sandpaper and respray.</string>
    <string name="buff_paint_in_circular_motions_with_a_buffer_being_careful_not_to_burn_the_paint_by_holding_the_buffer_in_one_spot_too_long">Buff paint in circular motions with a buffer, being careful not to burn the paint by holding the buffer in one spot too long.</string>
    <string name="todo">TODO</string>
</resources>
