<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.a4155cmp.SandingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="384dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CheckBox_Sanding1"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/sanding1"/>

    <CheckBox
        android:id="@+id/CheckBox_Sanding2"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBox_Sanding1"
        tools:text="@string/sanding2"/>

    <CheckBox
        android:id="@+id/CheckBox_Sanding3"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBox_Sanding2"
        tools:text="@string/sanding3" />

    <CheckBox
        android:id="@+id/CheckBox_Sanding4"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBox_Sanding3"
        tools:text="@string/sanding4" />

    <CheckBox
        android:id="@+id/CheckBox_Sanding5"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBox_Sanding4"
        tools:text="@string/sanding5" />


</android.support.constraint.ConstraintLayout>
